# sitebots_msgs

./: CMakeLists.txt  Makefile  README.md  package.xml  setup.py
msg/: Area.msg  Bounds.msg  CameraFeedback.msg  Channel.msg  ChannelList.msg  Connection.msg  Edge.msg  GeometryGraph.msg  Mission.msg  MissionItem.msg  MobileStatus.msg  Node.msg  Path.msg  Point.msg  Vehicle.msg  Waypoint.msg  sitebots.proto
proto/: sitebots.proto
src/sitebots_proto/: sitebots_pb2.py
